--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="button" onclick="enterButton()" id="enterButton">Enter</button>
             </div>
             <div id="shareButton">
-                <button class="button" onclick="shareButton()" id="shButton">Share</button>
+                <button class="button" onclick="shareButton()" id="shButton">Teilen</button>
             </div>
         </div>
     </body>
