Added display of remaining tries, as well as some other UI improvements

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
                 <div class="grid" id="gridContainer">
                         
                 </div>
+                <div id="triesInfo">
+                    <p>Verbleibende Versuche:   </p>
+                    <div id="triesCircles">
+                        <div class="try-circle"></div>
+                        <div class="try-circle"></div>
+                        <div class="try-circle"></div>
+                        <div class="try-circle"></div>
+                    </div>
+                </div>
                 <div id="buttons">
                     <button class="button" onclick="shuffleButton()" id="shuffleButton">Mischen</button>
                     <button class="button" onclick="shareButton()" id="shareButton">Teilen</button>
