improved upon animations

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <div id="triesContainer">
                         
                 </div>
+                <div id="notificationContainer"></div>
             </div>
             <div id="container2">
                 <div id="solvedContainer">
