--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
     <body>
+        <!-- Loading screen -->
+        <div id="loadingScreen">
+            <div class="loader"></div>
+            <p>Laden...</p>
+        </div>
         <script src="connections.js"></script>
         <div id="mainContainer">
             <div id="container1">
@@ -38,5 +43,19 @@
                 </div>
             </div>
         </div>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <p id="modalText"></p>
+              <button id="teilenButton">Teilen</button>
+            </div>
+          </div>
+          <script>
+            // Hide loading screen when page is fully loaded
+            window.addEventListener('load', function() {
+              const loadingScreen = document.getElementById('loadingScreen');
+              loadingScreen.style.display = 'none';
+            });
+          </script>
     </body>
 </html>
