--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div id="buttons">
                     <button class="button" onclick="shuffleButton()" id="shuffleButton">Mischen</button>
-                    <button class="button" onclick="shareButton()" id="shareButton">Teilen</button>
+                    <button class="button" onclick="shareButton()" id="shareButton">Ergebnisse</button>
                     <button class="button" onclick="enterButton()" id="enterButton">Enter</button>
                 </div>
             </div>
