--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
     <body>
-        <script type="module" src="connections.js"></script>
+        <script src="connections.js"></script>
         <div id="mainContainer">
             <div id="container1">
                 <div id="triesContainer">
