Added functionality to prevent display in landscape mode on mobile devices

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <script src="connections.js"></script>
+        <div id="flip-message" class="flip-message">
+            <p>Bitte drehe das Handy wieder in die aufrechte Position</p>
+        </div>
         <div id="mainContainer">
             <div id="container1">
                 <div id="triesContainer">
