Added functionality to not show anything, if no full puzzle has been set for the day.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     </head>
     <body>
         <script src="connections.js"></script>
-        <div id="flip-message" class="flip-message">
+        <div id="flip-message" class="message">
             <p>Bitte drehe das Handy wieder in die aufrechte Position</p>
+        </div>
+        <div id="no-puzzle-message" class="message">
+            Aktuell ist kein Puzzle für heute vorhanden!
         </div>
         <div id="mainContainer">
             <div id="container1">
