Improved dark mode styling

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     </head>
     <body>
         <script src="connections.js"></script>
-        <div id="flip-message" class="message">
+        <div id="flip-message" class="message text">
             <p>Bitte drehe das Handy wieder in die aufrechte Position</p>
         </div>
-        <div id="no-puzzle-message" class="message">
+        <div id="no-puzzle-message" class="message text">
             Aktuell ist kein Puzzle für heute vorhanden!
         </div>
         <div id="top-bar">
             <div class="gear-icon" id="gear-icon">&#9881;</div>
         </div>
         <div id="settings-modal" class="modal">
-            <div class="modal-content">
+            <div class="modal-content text">
                 <span class="close" id="closeSettings">&times;</span>
                 <div class="dark-mode-toggle">
                     <span><b>Dark Mode</b></span>
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div id="myModal" class="modal">
-            <div class="modal-content">
+            <div class="modal-content text">
               <span class="close" id="closeShare">&times;</span>
               <p id="modalText"></p>
               <button id="teilenButton">Teilen</button>
