Fixed bugs related to displaying number of tries

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="grid" id="gridContainer">
                         
                 </div>
-                <div id="triesInfo">
+                <div id="triesInfo" class="text">
                     <p>Verbleibende Versuche:</p>
                     <div id="triesCircles">
                         <div class="try-circle"></div>
