Changed some lingo and code order

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div id="buttons">
                     <button class="button" onclick="shuffleButton()" id="shuffleButton">Mischen</button>
-                    <button class="button" onclick="shareButton()" id="shareButton">Ergebnisse</button>
+                    <button class="button" onclick="resultsButton()" id="resultsButton">Ergebnisse</button>
                     <button class="button" onclick="enterButton()" id="enterButton">Enter</button>
                 </div>
             </div>
@@ -62,7 +62,7 @@
             <div class="modal-content text">
               <span class="close" id="closeShare">&times;</span>
               <p id="modalText"></p>
-              <button id="teilenButton">Teilen</button>
+              <button id="shareButton">Teilen</button>
             </div>
           </div>
     </body>
