Extracted puzzles to external puzzles file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
     <body>
-        <script src="connections.js"></script>
+        <script type="module" src="connections.js"></script>
         <div id="flip-message" class="message text">
             <p>Bitte drehe das Handy wieder in die aufrechte Position</p>
         </div>
