Fixed a bug that was caused, when the UI was first being loaded in landscape mode

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <script type="module" src="connections.js"></script>
+        <div id="loading-screen">
+            <p>Loading...</p>
+        </div>
         <div id="flip-message" class="message text">
             <p>Bitte drehe das Handy wieder in die aufrechte Position</p>
         </div>
